Update section headers in analysis notebook

--- a/Analysis_jupyter_Notebook.ipynb
+++ b/Analysis_jupyter_Notebook.ipynb
@@ -895,18 +895,18 @@
     "\n",
     "### Why Does This Happen?\n",
     "\n",
-    "### Reason 1: Term Limits\n",
+    "### Term Limits\n",
     "- **Presidential systems** often have strict term limits. Example: US President can only serve 2 terms maximum. Even if they are very popular, they must stop after 2 terms. Parliamentary systems** usually have NO term limits. A Prime Minister can serve as many terms as they keep winning elections\n",
     "\n",
-    "### Reason 2: Party Support\n",
+    "### Party Support\n",
     "- In parliamentary systems, if the same party keeps winning elections, the same leader often stays. Example is Angela Merkel (Germany) served 4 terms because her party kept winning. The party decides to keep a successful leader\n",
     "\n",
-    "### Reason 3: How Leaders Get Power\n",
+    "### How Leaders Get Power\n",
     "- **Presidential**: The person wins directly. They have a fixed time period (like 4 or 6 years). After their terms are up, they MUST leave\n",
     "**Parliamentary**: The winning party chooses the leader\n",
     "- If the party wins again, they often keep the same leader and no forced retirement\n",
     "\n",
-    "### Reason 4: Constitutional Rules\n",
+    "### Constitutional Rules\n",
     "- Many presidential systems wrote rules that say \"maximum 2 terms\". This was done to prevent one person having too much power for too long. Parliamentary systems focus more on party democracy than individual limits\n",
     "\n",
     "\n",
